integration-tests/src/test/resources/istio/istio-dr-template.yaml
# Copyright (c) 2020, 2021, 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "NAMESPACE-destination-rule"
  namespace: "NAMESPACE"
spec:
  host: "*.NAMESPACE.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 7001
      tls: {}
    - port:
        number: 8001
      tls: {}      
    tls:
      mode: ISTIO_MUTUAL
