integration-tests/src/test/resources/istio/istio-productionsecure-tls-mode.yaml
# Copyright (c) 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: wls-securedomain-gateway
  namespace: NAMESPACE
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-default-admin
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: wls-securedomain-virtualservice
  namespace: NAMESPACE
spec:
  gateways:
    - wls-domain-gateway
  hosts:
    - "*"
  tls:
    - match:
        - port: 443
          sniHosts:
          - "*"
      route:
        - destination:
            host: istio-mii-securemode-admin-server.NAMESPACE.svc.cluster.local
            port:
              number: 9002
