integration-tests/src/test/resources/istio/istio-tls-mode.yaml
# Copyright (c) 2023, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict-tls-policy"
  namespace: NAMESPACE
spec:
  mtls:
    mode: STRICT
